an interface for crdt with G-Counter implmentation
Define an interface to operate with CRDTs. It is based on Outline of
a state-based object specification. The interface uses lens as
an application/type abstraction (e.g. lens:pair(...) define how to
select process id)

Provide an reference implementation of G-Counter and its test suite.

--- a/rebar.config
+++ b/rebar.config
@@ -8,4 +8,8 @@
    {uid, ".*",
       {git, "https://github.com/fogfish/uid", {branch, master}}
    }
+
+  ,{datum, ".*",
+      {git, "https://github.com/fogfish/datum", {branch, master}}
+   }
 ]}.
