define explicit interface for OR-Set

--- a/rebar.config
+++ b/rebar.config
@@ -5,11 +5,9 @@
 {lib_dirs, []}.
 
 {deps, [
+   datum,
+
    {uid, ".*",
       {git, "https://github.com/fogfish/uid", {branch, master}}
-   }
-
-  ,{datum, ".*",
-      {git, "https://github.com/fogfish/datum", {branch, master}}
    }
 ]}.
